Fixed text not showing on iOS

--- a/src/components/PostCreate.css
+++ b/src/components/PostCreate.css
@@ -21,7 +21,8 @@
   margin: 0 auto;
   margin-top: 2rem;
   padding: 0.5em 1.5em;
-  background: none;
+  background: #fff;
+  color: #000;
   border: 1px solid #000000;
   border-radius: 5px;
   width: 85px;
